--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="header-primary--main">Outdoors</span>
                 <span class="header-primary--sub">is where life happens</span>
             </h1>
-            <a href="#" class="header__btn btn--white header__btn--animated">Discover our tours</a>
+            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
 </body>
