complete making my own grid-layout

--- a/index.html
+++ b/index.html
@@ -21,5 +21,40 @@
             <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
+    <!-- <main>
+        <div class="section-about">
+            <h2>Exciting tours for advanterous people</h2>
+        </div>
+    </main> -->
+    <section class="grid-test">        
+        <div class="row">
+            <div class="col-1">col-1-of-1</div>
+            <div class="col-1">col-2-of-1</div>
+        </div>
+        <div class="row">
+            <div class="col-2">col-1-of-2</div>
+            <div class="col-2">col-2-of-2</div>
+            <div class="col-2">col-3-of-2</div>
+        </div>
+        <div class="row">
+            <div class="col-3">col-1-of-3</div>
+            <div class="col-3">col-2-of-3</div>
+        </div>
+        <div class="row">
+            <div class="col-4">col-1-of-4</div>
+            <div class="col-4">col-2-of-4</div>
+            <div class="col-4">col-3-of-4</div>
+            <div class="col-4">col-4-of-4</div>
+        </div>
+        <div class="row">
+            <div class="col-5">col-1-of-5</div>
+            <div class="col-5">col-2-of-5</div>
+            <div class="col-5">col-3-of-5</div>                
+        </div>
+        <div class="row">
+            <div class="col-6">col-1-of-6</div>
+            <div class="col-6">col-2-of-6</div>                
+        </div>        
+    </section>
 </body>
 </html>
