--- a/index.html
+++ b/index.html
@@ -21,12 +21,33 @@
             <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
-    <!-- <main>
-        <div class="section-about">
-            <h2>Exciting tours for advanterous people</h2>
+    <main class="main">
+        <div class="row section-about">
+            <div class="u-center-text u-mb-l u-mt-xl">
+                <h2 class="header-secondary" >Exciting tours for advanterous people</h2>
+            </div>            
+            <div class="col-1-of-2 section-about__paragraph">
+                <div class="u-mb-s">
+                    <div class="u-mb-s">
+                        <h3 class="header-tertiary">You're going to fall in love with this nature</h3>
+                    </div>                    
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias voluptate quod temporibus distinctio magnam, ratione eius voluptatum vero expedita beatae adipisci labore maxime mollitia obcaecati veniam fugiat quasi libero?</p>
+                </div>
+                <div class="u-mb-m">
+                    <div class="u-mb-s">
+                        <h3 class="header-tertiary">Live adventures like you never have before</h3>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit hic tenetur nesciunt aut, corporis quibusdam amet ex beatae vero obcaecati inventore a exercitationem! Voluptatum explicabo eius voluptas tempora in fuga.</p>
+                </div>
+            </div>
+            <div class="col-1-of-2 section-about__img">
+                <img src="img/nat-1-large.jpg" alt="Image 1" class="section-about__img">
+                <img src="img/nat-2-large.jpg" alt="Image 2" class="section-about__img">
+                <img src="img/nat-3-large.jpg" alt="Image 3" class="section-about__img">
+            </div>
         </div>
-    </main> -->
-    <section class="grid-test">        
+    </main>
+    <!-- <section class="grid-test">        
         <div class="row">
             <div class="col-1">col-1-of-1</div>
             <div class="col-1">col-2-of-1</div>
@@ -55,6 +76,6 @@
             <div class="col-6">col-1-of-6</div>
             <div class="col-6">col-2-of-6</div>                
         </div>        
-    </section>
+    </section> -->
 </body>
 </html>
