--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+
     <title>Natours</title>
 </head>
+
 <body>
     <header class="header">
         <div class="header__logo-box">
@@ -22,60 +29,90 @@
         </div>
     </header>
     <main class="main">
-        <div class="row section-about">
+        <section class="row section-about">
             <div class="u-center-text u-mb-l u-mt-xl">
-                <h2 class="header-secondary" >Exciting tours for advanterous people</h2>
-            </div>            
-            <div class="col-1-of-2 section-about__paragraph">
+                <h2 class="header-secondary">Exciting tours for advanterous people</h2>
+            </div>
+            <div class="col-1-of-2">
                 <div class="u-mb-s">
                     <div class="u-mb-s">
                         <h3 class="header-tertiary">You're going to fall in love with this nature</h3>
-                    </div>                    
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias voluptate quod temporibus distinctio magnam, ratione eius voluptatum vero expedita beatae adipisci labore maxime mollitia obcaecati veniam fugiat quasi libero?</p>
+                    </div>
+                    <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias
+                        voluptate quod temporibus distinctio magnam, ratione eius voluptatum vero expedita beatae
+                        adipisci labore maxime mollitia obcaecati veniam fugiat quasi libero?</p>
                 </div>
-                <div class="u-mb-m">
+                <div>
                     <div class="u-mb-s">
                         <h3 class="header-tertiary">Live adventures like you never have before</h3>
                     </div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit hic tenetur nesciunt aut, corporis quibusdam amet ex beatae vero obcaecati inventore a exercitationem! Voluptatum explicabo eius voluptas tempora in fuga.</p>
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit hic tenetur
+                        nesciunt aut, corporis quibusdam amet ex beatae vero obcaecati inventore a exercitationem!
+                        Voluptatum explicabo eius voluptas tempora in fuga.</p>
+                </div>
+                <div class="u-mt-m">
+                    <a href="#" class="btn-text">Learn more &rarr; </a>
                 </div>
             </div>
-            <div class="col-1-of-2 section-about__img">
-                <img src="img/nat-1-large.jpg" alt="Image 1" class="section-about__img">
-                <img src="img/nat-2-large.jpg" alt="Image 2" class="section-about__img">
-                <img src="img/nat-3-large.jpg" alt="Image 3" class="section-about__img">
+            <div class="col-1-of-2 composition">
+                <img src="img/nat-1-large.jpg" alt="Image 1" class="composition__img composition__img-1">
+                <img src="img/nat-2-large.jpg" alt="Image 2" class="composition__img composition__img-2">
+                <img src="img/nat-3-large.jpg" alt="Image 3" class="composition__img composition__img-3">
             </div>
-        </div>
+        </section>
+
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="fas fa-globe icon"></i>
+                        <h3 class="header-tertiary">
+                            Explore the world
+                        </h3>
+                        <p class="feature--paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="fas fa-compass icon"></i>
+                        <h3 class="header-tertiary">
+                            Meat the nature
+                        </h3>
+                        <p class="feature--paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="fas fa-book-open icon"></i>
+                        <h3 class="header-tertiary">
+                            Find your way
+                        </h3>
+                        <p class="feature--paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="fas fa-heart icon"></i>
+                        <h3 class="header-tertiary">
+                            Live a healthier life
+                        </h3>
+                        <p class="feature--paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="feature-2"></div>
+            <div class="feature-3"></div>
+            <div class="feature-4"></div> -->
+        </section>
     </main>
-    <!-- <section class="grid-test">        
-        <div class="row">
-            <div class="col-1">col-1-of-1</div>
-            <div class="col-1">col-2-of-1</div>
-        </div>
-        <div class="row">
-            <div class="col-2">col-1-of-2</div>
-            <div class="col-2">col-2-of-2</div>
-            <div class="col-2">col-3-of-2</div>
-        </div>
-        <div class="row">
-            <div class="col-3">col-1-of-3</div>
-            <div class="col-3">col-2-of-3</div>
-        </div>
-        <div class="row">
-            <div class="col-4">col-1-of-4</div>
-            <div class="col-4">col-2-of-4</div>
-            <div class="col-4">col-3-of-4</div>
-            <div class="col-4">col-4-of-4</div>
-        </div>
-        <div class="row">
-            <div class="col-5">col-1-of-5</div>
-            <div class="col-5">col-2-of-5</div>
-            <div class="col-5">col-3-of-5</div>                
-        </div>
-        <div class="row">
-            <div class="col-6">col-1-of-6</div>
-            <div class="col-6">col-2-of-6</div>                
-        </div>        
-    </section> -->
 </body>
+
 </html>
