Complete making cards rotating

--- a/index.html
+++ b/index.html
@@ -29,88 +29,126 @@
         </div>
     </header>
     <main class="main">
-        <section class="row section-about">
-            <div class="u-center-text u-mb-l u-mt-xl">
-                <h2 class="header-secondary">Exciting tours for advanterous people</h2>
-            </div>
-            <div class="col-1-of-2">
-                <div class="u-mb-s">
+        <section class="section-about">
+            <div class="row">
+                <div class="u-center-text u-mb-l u-mt-xl">
+                    <h2 class="header-secondary">Exciting tours for advanterous people</h2>
+                </div>
+                <div class="col-1-of-2">
                     <div class="u-mb-s">
-                        <h3 class="header-tertiary">You're going to fall in love with this nature</h3>
+                        <div class="u-mb-s">
+                            <h3 class="header-tertiary">You're going to fall in love with this nature</h3>
+                        </div>
+                        <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias
+                            voluptate quod temporibus distinctio magnam, ratione eius voluptatum vero expedita beatae
+                            adipisci labore maxime mollitia obcaecati veniam fugiat quasi libero?</p>
                     </div>
-                    <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias
-                        voluptate quod temporibus distinctio magnam, ratione eius voluptatum vero expedita beatae
-                        adipisci labore maxime mollitia obcaecati veniam fugiat quasi libero?</p>
-                </div>
-                <div>
-                    <div class="u-mb-s">
-                        <h3 class="header-tertiary">Live adventures like you never have before</h3>
+                    <div>
+                        <div class="u-mb-s">
+                            <h3 class="header-tertiary">Live adventures like you never have before</h3>
+                        </div>
+                        <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit hic tenetur
+                            nesciunt aut, corporis quibusdam amet ex beatae vero obcaecati inventore a exercitationem!
+                            Voluptatum explicabo eius voluptas tempora in fuga.</p>
                     </div>
-                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit hic tenetur
-                        nesciunt aut, corporis quibusdam amet ex beatae vero obcaecati inventore a exercitationem!
-                        Voluptatum explicabo eius voluptas tempora in fuga.</p>
+                    <div class="u-mt-m">
+                        <a href="#" class="btn-text">Learn more &rarr; </a>
+                    </div>
                 </div>
-                <div class="u-mt-m">
-                    <a href="#" class="btn-text">Learn more &rarr; </a>
+                <div class="col-1-of-2 composition">
+                    <img src="img/nat-1-large.jpg" alt="Image 1" class="composition__img composition__img-1">
+                    <img src="img/nat-2-large.jpg" alt="Image 2" class="composition__img composition__img-2">
+                    <img src="img/nat-3-large.jpg" alt="Image 3" class="composition__img composition__img-3">
                 </div>
-            </div>
-            <div class="col-1-of-2 composition">
-                <img src="img/nat-1-large.jpg" alt="Image 1" class="composition__img composition__img-1">
-                <img src="img/nat-2-large.jpg" alt="Image 2" class="composition__img composition__img-2">
-                <img src="img/nat-3-large.jpg" alt="Image 3" class="composition__img composition__img-3">
-            </div>
+            </div>            
         </section>
 
         <section class="section-features">
             <div class="row">
                 <div class="col-1-of-4">
                     <div class="feature-box">
-                        <i class="fas fa-globe icon"></i>
+                        <i class="fas fa-globe feature-box__icon"></i>
                         <h3 class="header-tertiary">
                             Explore the world
                         </h3>
-                        <p class="feature--paragraph">
+                        <p class="feature-box__paragraph">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
                 <div class="col-1-of-4">
                     <div class="feature-box">
-                        <i class="fas fa-compass icon"></i>
+                        <i class="fas fa-compass feature-box__icon"></i>
                         <h3 class="header-tertiary">
                             Meat the nature
                         </h3>
-                        <p class="feature--paragraph">
+                        <p class="feature-box__paragraph">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
                 <div class="col-1-of-4">
                     <div class="feature-box">
-                        <i class="fas fa-book-open icon"></i>
+                        <i class="fas fa-book-open feature-box__icon"></i>
                         <h3 class="header-tertiary">
                             Find your way
                         </h3>
-                        <p class="feature--paragraph">
+                        <p class="feature-box__paragraph">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
                 <div class="col-1-of-4">
                     <div class="feature-box">
-                        <i class="fas fa-heart icon"></i>
+                        <i class="fas fa-heart feature-box__icon"></i>
                         <h3 class="header-tertiary">
                             Live a healthier life
                         </h3>
-                        <p class="feature--paragraph">
+                        <p class="feature-box__paragraph">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
+            </div>            
+        </section>
+
+        <section class="section-tours">
+            <div class="row">
+                <div class="u-center-text u-mb-l">
+                    <h3 class="header-secondary">
+                        Most popular tours
+                    </h3>
+                </div>
+                
+                <div class="col-1-of-4">      
+                    <div class="tour-card">
+                        <div class="tour-card__side tour-card__side--front tour-card__side--front-1">
+                            <div class="card__img card__img-1">
+                                <h4 class="header-university">
+                                    <span class="card__header-tour">The sea</span>
+                                    <span class="card__header-tour">explorer</span>
+                                </h4>                                
+                            </div>                        
+                            <ul class="card__list">
+                                <li>3 day tours</li>
+                                <li>Up to 30 people</li>
+                                <li>2 tour guides</li>
+                                <li>Sleep in cozy hotel</li>
+                                <li>Difficulty: easy</li>
+                            </ul>                        
+                        </div>
+                        <div class="tour-card__side tour-card__side--back tour-card__side--back-1">
+                            MY BACK SIDE
+                        </div>
+                    </div>                                  
+                </div>
+                <div class="col-1-of-4">
+                    <div class="tour-card"></div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="tour-card"></div>
+                </div>              
             </div>
-            <!-- <div class="feature-2"></div>
-            <div class="feature-3"></div>
-            <div class="feature-4"></div> -->
         </section>
     </main>
 </body>
