Complete making all front-end cards

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             Explore the world
                         </h3>
                         <p class="feature-box__paragraph">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
@@ -80,10 +80,10 @@
                     <div class="feature-box">
                         <i class="fas fa-compass feature-box__icon"></i>
                         <h3 class="header-tertiary">
-                            Meat the nature
+                            Meet the nature
                         </h3>
                         <p class="feature-box__paragraph">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
@@ -120,13 +120,13 @@
                     </h3>
                 </div>
                 
-                <div class="col-1-of-4">      
+                <div class="col-1-of-3">      
                     <div class="tour-card">
                         <div class="tour-card__side tour-card__side--front tour-card__side--front-1">
                             <div class="card__img card__img-1">
                                 <h4 class="header-university">
-                                    <span class="card__header-tour">The sea</span>
-                                    <span class="card__header-tour">explorer</span>
+                                    <span class="card__header-tour card__header-tour-1">The sea</span>
+                                    <span class="card__header-tour card__header-tour-1">explorer</span>
                                 </h4>                                
                             </div>                        
                             <ul class="card__list">
@@ -142,11 +142,49 @@
                         </div>
                     </div>                                  
                 </div>
-                <div class="col-1-of-4">
-                    <div class="tour-card"></div>
+                <div class="col-1-of-3">
+                    <div class="tour-card">
+                        <div class="tour-card__side tour-card__side--front tour-card__side--front-2">
+                            <div class="card__img card__img-2">
+                                <h4 class="header-university">
+                                    <span class="card__header-tour card__header-tour-2">The forest</span>
+                                    <span class="card__header-tour card__header-tour-2">hiker</span>
+                                </h4>                                
+                            </div>                        
+                            <ul class="card__list">
+                                <li>7 day tours</li>
+                                <li>Up to 40 people</li>
+                                <li>6 tour guides</li>
+                                <li>Sleep in prodived</li>
+                                <li>Difficulty: medium</li>
+                            </ul>                        
+                        </div>
+                        <div class="tour-card__side tour-card__side--back tour-card__side--back-2">
+                            MY BACK SIDE
+                        </div>
+                    </div>   
                 </div>
-                <div class="col-1-of-4">
-                    <div class="tour-card"></div>
+                <div class="col-1-of-3">
+                    <div class="tour-card">
+                        <div class="tour-card__side tour-card__side--front tour-card__side--front-3">
+                            <div class="card__img card__img-3">
+                                <h4 class="header-university">
+                                    <span class="card__header-tour card__header-tour-3">The snow</span>
+                                    <span class="card__header-tour card__header-tour-3">adventure</span>
+                                </h4>                                
+                            </div>                        
+                            <ul class="card__list">
+                                <li>5 day tours</li>
+                                <li>Up to 15 people</li>
+                                <li>3 tour guides</li>
+                                <li>Sleep in provided tents</li>
+                                <li>Difficulty: hard</li>
+                            </ul>                        
+                        </div>
+                        <div class="tour-card__side tour-card__side--back tour-card__side--back-3">
+                            MY BACK SIDE
+                        </div>
+                    </div>   
                 </div>              
             </div>
         </section>
