add background-blend-mode property into the cards images

--- a/index.html
+++ b/index.html
@@ -113,13 +113,12 @@
         </section>
 
         <section class="section-tours">
-            <div class="row">
-                <div class="u-center-text u-mb-l">
-                    <h3 class="header-secondary">
-                        Most popular tours
-                    </h3>
-                </div>
-                
+            <div class="u-center-text u-mb-l">
+                <h3 class="header-secondary">
+                    Most popular tours
+                </h3>
+            </div>                
+            <div class="row">                
                 <div class="col-1-of-3">      
                     <div class="tour-card">
                         <div class="tour-card__side tour-card__side--front tour-card__side--front-1">
@@ -185,8 +184,12 @@
                             MY BACK SIDE
                         </div>
                     </div>   
-                </div>              
+                </div>                        
             </div>
+            <div class="u-mt-xl">
+                <a href="#" class="btn btn--green">Discover all tours</a>                
+            </div>
+            
         </section>
     </main>
 </body>
