Complete making --side-back of the cards

--- a/index.html
+++ b/index.html
@@ -137,7 +137,15 @@
                             </ul>                        
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-1">
-                            MY BACK SIDE
+                            <div class="tour-card__side--back-contact">
+                                <div class="u-center-text tour-card__side--back-contact--content">
+                                    <div class="paragraph">Only</div>
+                                    <div class="pricing">$120</div>                                    
+                                </div>                           
+                                <div class="u-mt-m">
+                                    <a href="#" class="btn btn--white">Contact us</a>
+                                </div>                                     
+                            </div>
                         </div>
                     </div>                                  
                 </div>
@@ -159,7 +167,15 @@
                             </ul>                        
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-2">
-                            MY BACK SIDE
+                            <div class="tour-card__side--back-contact">
+                                <div class="u-center-text tour-card__side--back-contact--content">
+                                    <div class="paragraph">Only</div>
+                                    <div class="pricing">$174</div>                                    
+                                </div>                           
+                                <div class="u-mt-m">
+                                    <a href="#" class="btn btn--white">Contact us</a>
+                                </div>                                     
+                            </div>
                         </div>
                     </div>   
                 </div>
@@ -181,7 +197,15 @@
                             </ul>                        
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-3">
-                            MY BACK SIDE
+                            <div class="tour-card__side--back-contact">
+                                <div class="u-center-text tour-card__side--back-contact--content">
+                                    <div class="paragraph">Only</div>
+                                    <div class="pricing">$180</div>                                    
+                                </div>                           
+                                <div class="u-mt-m">
+                                    <a href="#" class="btn btn--white">Contact us</a>
+                                </div>                                     
+                            </div>
                         </div>
                     </div>   
                 </div>                        
