Change some properties in _cards and markups

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                             </ul>                        
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-1">
-                            <div class="tour-card__side--back-contact">
-                                <div class="u-center-text tour-card__side--back-contact--content">
-                                    <div class="paragraph">Only</div>
-                                    <div class="pricing">$120</div>                                    
+                            <div class="tour-card__side--back__contact">
+                                <div class="u-center-text contact__price-box">
+                                    <div class="contact__price-box__paragraph">Only</div>
+                                    <div class="contact__price-box__pricing">$120</div>                                    
                                 </div>                           
                                 <div class="u-mt-m">
                                     <a href="#" class="btn btn--white">Contact us</a>
@@ -167,10 +167,10 @@
                             </ul>                        
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-2">
-                            <div class="tour-card__side--back-contact">
-                                <div class="u-center-text tour-card__side--back-contact--content">
-                                    <div class="paragraph">Only</div>
-                                    <div class="pricing">$174</div>                                    
+                            <div class="tour-card__side--back__contact">
+                                <div class="u-center-text contact__price-box">
+                                    <div class="contact__price-box__paragraph">Only</div>
+                                    <div class="contact__price-box__pricing">$124</div>                                    
                                 </div>                           
                                 <div class="u-mt-m">
                                     <a href="#" class="btn btn--white">Contact us</a>
@@ -197,10 +197,10 @@
                             </ul>                        
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-3">
-                            <div class="tour-card__side--back-contact">
-                                <div class="u-center-text tour-card__side--back-contact--content">
-                                    <div class="paragraph">Only</div>
-                                    <div class="pricing">$180</div>                                    
+                            <div class="tour-card__side--back__contact">
+                                <div class="u-center-text contact__price-box">
+                                    <div class="contact__price-box__paragraph">Only</div>
+                                    <div class="contact__price-box__pricing">$180</div>                                    
                                 </div>                           
                                 <div class="u-mt-m">
                                     <a href="#" class="btn btn--white">Contact us</a>
