--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-1">
                             <div class="tour-card__side--back__contact">
-                                <div class="u-center-text contact__price-box">
+                                <div class="u-center-text contact__price-box contact__price-box-1">
                                     <div class="contact__price-box__paragraph">Only</div>
                                     <div class="contact__price-box__pricing">$120</div>                                    
                                 </div>                           
@@ -168,7 +168,7 @@
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-2">
                             <div class="tour-card__side--back__contact">
-                                <div class="u-center-text contact__price-box">
+                                <div class="u-center-text contact__price-box contact__price-box-2">
                                     <div class="contact__price-box__paragraph">Only</div>
                                     <div class="contact__price-box__pricing">$124</div>                                    
                                 </div>                           
@@ -198,7 +198,7 @@
                         </div>
                         <div class="tour-card__side tour-card__side--back tour-card__side--back-3">
                             <div class="tour-card__side--back__contact">
-                                <div class="u-center-text contact__price-box">
+                                <div class="u-center-text contact__price-box contact__price-box-3">
                                     <div class="contact__price-box__paragraph">Only</div>
                                     <div class="contact__price-box__pricing">$180</div>                                    
                                 </div>                           
