Complete making content for shape-box

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             Live a healthier life
                         </h3>
                         <p class="feature-box__paragraph">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit, perferendis, cupiditate, ipsam ipsum sint unde dignissimos harum fugit necessitatibus magni quisquam.
                         </p>
                     </div>
                 </div>
@@ -214,6 +214,54 @@
                 <a href="#" class="btn btn--green">Discover all tours</a>                
             </div>
             
+        </section>
+
+        <section class="section-stories">
+            <div class="u-center-text u-mb-l">
+                <h3 class="header-secondary">
+                    We make people genuinely happy
+                </h3>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <div class="story__shape">                        
+                        <p class="story__img-content">Noat Nguyen</p>                        
+                        <img src="/img/nat-6.jpg" alt="" class="story__img">
+                    </div>
+                    <div class="story__text">
+                        <h3 class="header-tertiary u-mb-s">
+                            I had the best weekend ever with my family
+                        </h3>
+                        <p class="story__paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, modi assumenda fugit repudiandae culpa, maiores temporibus sed sapiente vero accusamus libero quas similique ut, ipsum commodi reprehenderit eos ipsa aliquid!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-mt-l">
+                <div class="row">
+                    <div class="story">
+                        <div class="story__shape">                        
+                            <p class="story__img-content">Toan Nguyen</p>                        
+                            <img src="/img/nat-7.jpg" alt="" class="story__img">
+                        </div>
+                        <div class="story__text">
+                            <h3 class="header-tertiary u-mb-s">
+                                I am living the best version of myself
+                            </h3>
+                            <p class="story__paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, modi assumenda fugit repudiandae culpa, maiores temporibus sed sapiente vero accusamus libero quas similique ut, ipsum commodi reprehenderit eos ipsa aliquid!
+                            </p>
+                        </div>
+                    </div>
+                </div>            
+            </div>
+            
+            <div class="u-center-text u-mt-l">
+                <a href="#" class="btn-text">Read all stories &rArr;</a>
+            </div>            
         </section>
     </main>
 </body>
