Complete feature-stories layout

--- a/index.html
+++ b/index.html
@@ -217,14 +217,20 @@
         </section>
 
         <section class="section-stories">
+            
             <div class="u-center-text u-mb-l">
                 <h3 class="header-secondary">
                     We make people genuinely happy
                 </h3>
             </div>
 
-            <div class="row">
-                <div class="story">
+            <div class="bg-video">
+                <video src="./img/video.mp4" type="video/mp4" class="bg-video__content" autoplay muted loop></video>
+                <video src="./img/video.webm" type="video/webm" class="bg-video__content" autoplay muted loop></video>
+            </div>
+
+            <div class="row">                
+                <div class="story">                    
                     <div class="story__shape">                        
                         <p class="story__img-content">Noat Nguyen</p>                        
                         <img src="/img/nat-6.jpg" alt="" class="story__img">
@@ -262,6 +268,7 @@
             <div class="u-center-text u-mt-l">
                 <a href="#" class="btn-text">Read all stories &rArr;</a>
             </div>            
+
         </section>
     </main>
 </body>
