Change content in main into home

--- a/index.html
+++ b/index.html
@@ -270,6 +270,16 @@
             </div>            
 
         </section>
+
+        <section class="section-bookings">
+            <div class="row">
+                <div class="booking">
+                    <div class="booking__form">
+                        
+                    </div>
+                </div>                
+            </div>
+        </section>
     </main>
 </body>
 
