Complete making input forms

--- a/index.html
+++ b/index.html
@@ -272,13 +272,25 @@
         </section>
 
         <section class="section-bookings">
-            <div class="row">
+            <div class="row">                                        
                 <div class="booking">
-                    <div class="booking__form">
-                        
+                    <div class="u-mb-m">
+                        <h3 class="header-secondary">
+                            Start booking now
+                        </h3>
                     </div>
-                </div>                
-            </div>
+                    <div class="booking__forms">
+                        <form action="#" class="booking__form booking__form--name">
+                            <input type="text" placeholder="Full name" id="name" class="booking__input">
+                            <label for="name" class="booking__label">Full name</label>
+                        </form>            
+                        <form action="#" class="booking__form booking__form--email">
+                            <input type="email" placeholder="Email address" id="name" class="booking__input">
+                            <label for="name" class="booking__label">Email address</label>
+                        </form>                    
+                    </div>
+                </div>                                                            
+            </div>                                                     
         </section>
     </main>
 </body>
