Re-style section-booking size

--- a/index.html
+++ b/index.html
@@ -274,18 +274,18 @@
         <section class="section-bookings">
             <div class="row">                                        
                 <div class="booking">
-                    <div class="u-mb-m">
+                    <div class="u-mb-s">
                         <h3 class="header-secondary">
                             Start booking now
                         </h3>
                     </div>
                     <div class="booking__forms">
                         <form action="#" class="booking__form booking__form--name">
-                            <input type="text" placeholder="Full name" id="name" class="booking__input">
+                            <input type="text" placeholder="Full name" id="name" class="booking__input" required>
                             <label for="name" class="booking__label">Full name</label>
                         </form>            
                         <form action="#" class="booking__form booking__form--email">
-                            <input type="email" placeholder="Email address" id="name" class="booking__input">
+                            <input type="email" placeholder="Email address" id="name" class="booking__input" required>
                             <label for="name" class="booking__label">Email address</label>
                         </form>                    
                     </div>
