Complete making radio button effects on booking-section

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="story">                    
                     <div class="story__shape">                        
                         <p class="story__img-content">Noat Nguyen</p>                        
-                        <img src="/img/nat-6.jpg" alt="" class="story__img">
+                        <img src="../img/nat-6.jpg" alt="" class="story__img">
                     </div>
                     <div class="story__text">
                         <h3 class="header-tertiary u-mb-s">
@@ -268,7 +268,6 @@
             <div class="u-center-text u-mt-l">
                 <a href="#" class="btn-text">Read all stories &rArr;</a>
             </div>            
-
         </section>
 
         <section class="section-bookings">
@@ -285,9 +284,26 @@
                             <label for="name" class="booking__label">Full name</label>
                         </form>            
                         <form action="#" class="booking__form booking__form--email">
-                            <input type="email" placeholder="Email address" id="name" class="booking__input" required>
-                            <label for="name" class="booking__label">Email address</label>
-                        </form>                    
+                            <input type="email" placeholder="Email address" id="email" class="booking__input" required>
+                            <label for="email" class="booking__label">Email address</label>
+                        </form>     
+                        <form action="#" class="booking__form">
+                            <div class="form__radio-group">
+                                <input type="radio" name="size" id="small" class="form__radio-input">
+                                <label for="small" class="form__radio-label">
+                                    <span class="form__radio-btn"></span>
+                                    Small tour group
+                                </label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" name="size" id="large" class="form__radio-input">
+                                <label for="large" class="form__radio-label">
+                                    <span class="form__radio-btn"></span>
+                                    Large tour group
+                                </label>
+                            </div>
+                        </form>
+                        
                     </div>
                 </div>                                                            
             </div>                                                     
