Complete making booking-section

--- a/index.html
+++ b/index.html
@@ -302,8 +302,10 @@
                                     Large tour group
                                 </label>
                             </div>
-                        </form>
-                        
+                        </form>     
+                        <div class="booking__btn">
+                            <button class="btn btn--green">Book now</button>                                                                        
+                        </div>                        
                     </div>
                 </div>                                                            
             </div>                                                     
